crates/yokectl/tests/snapshots/json_snapshots__catalog_channels_json_snapshot.snap
---
source: crates/yokectl/tests/json_snapshots.rs
expression: v
---
{
  "channels": [
    "usb",
    "Bluetooth"
  ]
}
