crates/yokectl/tests/snapshots/json_snapshots__catalog_inputs_json_snapshot.snap
---
source: crates/yokectl/tests/json_snapshots.rs
assertion_line: 133
expression: v
---
{
  "inputs": [
    "mp_left_sip",
    "mp_left_sip_soft",
    "mp_left_puff",
    "mp_left_puff_soft",
    "mp_left_center_sip",
    "mp_left_center_sip_soft",
    "mp_left_center_puff",
    "mp_left_center_puff_soft",
    "mp_center_sip",
    "mp_center_sip_soft",
    "mp_center_puff",
    "mp_center_puff_soft",
    "mp_right_center_sip",
    "mp_right_center_sip_soft",
    "mp_right_center_puff",
    "mp_right_center_puff_soft",
    "mp_right_sip",
    "mp_right_sip_soft",
    "mp_right_puff",
    "mp_right_puff_soft",
    "mp_left_right_sip",
    "mp_left_right_sip_soft",
    "mp_left_right_puff",
    "mp_left_right_puff_soft",
    "mp_triple_sip",
    "mp_triple_sip_soft",
    "mp_triple_puff",
    "mp_triple_puff_soft",
    "right_sip",
    "right_sip_soft",
    "right_sip_long",
    "right_puff",
    "right_puff_soft",
    "right_puff_long",
    "lip",
    "lip_soft",
    "left",
    "right",
    "up",
    "down",
    "N",
    "N_inner",
    "NE",
    "NE_inner",
    "E",
    "E_inner",
    "SE",
    "SE_inner",
    "S",
    "S_inner",
    "SW",
    "SW_inner",
    "W",
    "W_inner",
    "NW",
    "NW_inner",
    "any_direction",
    "center",
    "constant",
    "usb_1_left",
    "usb_1_right",
    "usb_1_up",
    "usb_1_down",
    "usb_2_left",
    "usb_2_right",
    "usb_2_up",
    "usb_2_down",
    "usb_1_N",
    "usb_1_N_inner",
    "usb_1_NE",
    "usb_1_NE_inner",
    "usb_1_E",
    "usb_1_E_inner",
    "usb_1_SE",
    "usb_1_SE_inner",
    "usb_1_S",
    "usb_1_S_inner",
    "usb_1_SW",
    "usb_1_SW_inner",
    "usb_1_W",
    "usb_1_W_inner",
    "usb_1_NW",
    "usb_1_NW_inner",
    "usb_2_N",
    "usb_2_N_inner",
    "usb_2_NE",
    "usb_2_NE_inner",
    "usb_2_E",
    "usb_2_E_inner",
    "usb_2_SE",
    "usb_2_SE_inner",
    "usb_2_S",
    "usb_2_S_inner",
    "usb_2_SW",
    "usb_2_SW_inner",
    "usb_2_W",
    "usb_2_W_inner",
    "usb_2_NW",
    "usb_2_NW_inner",
    "usb_1_button_1",
    "usb_1_button_2",
    "usb_1_button_3",
    "usb_1_button_4",
    "usb_1_button_5",
    "usb_1_button_6",
    "usb_1_button_7",
    "usb_1_button_8",
    "usb_1_button_9",
    "usb_1_button_10",
    "usb_1_button_11",
    "usb_1_button_12",
    "usb_1_button_13",
    "usb_1_button_14",
    "usb_1_button_15",
    "usb_2_button_1",
    "usb_2_button_2",
    "usb_2_button_3",
    "usb_2_button_4",
    "usb_2_button_5",
    "usb_2_button_6",
    "usb_2_button_7",
    "usb_2_button_8",
    "usb_2_button_9",
    "usb_2_button_10",
    "usb_2_button_11",
    "usb_2_button_12",
    "usb_2_button_13",
    "usb_2_button_14",
    "usb_2_button_15",
    "digital_in_1",
    "digital_in_2",
    "digital_in_3",
    "digital_in_4",
    "digital_in_5",
    "digital_in_6",
    "digital_in_7",
    "digital_in_8"
  ]
}
