crates/yokectl/tests/snapshots/json_snapshots__catalog_modes_json_snapshot.snap
---
source: crates/yokectl/tests/json_snapshots.rs
expression: v
---
{
  "modes": [
    "Mouse",
    "Mouse Scroll",
    "Left Analog",
    "Right Analog",
    "Mixed Analog",
    "D-Pad"
  ]
}
