crates/yokectl/tests/snapshots/json_snapshots__catalog_modifiers_json_snapshot.snap
---
source: crates/yokectl/tests/json_snapshots.rs
expression: v
---
{
  "modifiers": [
    "normal",
    "toggle",
    "delay_on",
    "delay_off",
    "greater_than",
    "less_than",
    "repeat",
    "pulse",
    "duty",
    "force_off",
    "delayed_latch",
    "tap",
    "increment_value",
    "decrement_value"
  ]
}
