crates/yokectl/tests/snapshots/json_snapshots__catalog_outputs_json_snapshot.snap
---
source: crates/yokectl/tests/json_snapshots.rs
expression: v
---
{
  "outputs": [
    "kb_a",
    "kb_b",
    "kb_c",
    "kb_d",
    "kb_e",
    "kb_f",
    "kb_g",
    "kb_h",
    "kb_i",
    "kb_j",
    "kb_k",
    "kb_l",
    "kb_m",
    "kb_n",
    "kb_o",
    "kb_p",
    "kb_q",
    "kb_r",
    "kb_s",
    "kb_t",
    "kb_u",
    "kb_v",
    "kb_w",
    "kb_x",
    "kb_y",
    "kb_z",
    "kb_0",
    "kb_1",
    "kb_2",
    "kb_3",
    "kb_4",
    "kb_5",
    "kb_6",
    "kb_7",
    "kb_8",
    "kb_9",
    "kb_f1",
    "kb_f2",
    "kb_f3",
    "kb_f4",
    "kb_f5",
    "kb_f6",
    "kb_f7",
    "kb_f8",
    "kb_f9",
    "kb_f10",
    "kb_f11",
    "kb_f12",
    "kb_space",
    "kb_enter",
    "kb_escape",
    "kb_tab",
    "kb_backspace",
    "kb_delete",
    "kb_left_shift",
    "kb_right_shift",
    "kb_left_control",
    "kb_right_control",
    "kb_left_alt",
    "kb_right_alt",
    "kb_left_gui",
    "kb_right_gui",
    "kb_up_arrow",
    "kb_down_arrow",
    "kb_left_arrow",
    "kb_right_arrow",
    "kb_slash",
    "kb_keypad_plus",
    "mouse_left",
    "mouse_right",
    "mouse_up",
    "mouse_down",
    "mouse_wheel_up",
    "mouse_wheel_down",
    "mouse_pan_left",
    "mouse_pan_right",
    "mouse_left_button",
    "mouse_right_button",
    "mouse_middle_button",
    "x",
    "circle",
    "square",
    "triangle",
    "left_1",
    "left_2",
    "left_3",
    "right_1",
    "right_2",
    "right_3",
    "select",
    "start",
    "ps3",
    "A",
    "B",
    "X",
    "Y",
    "left_bumper",
    "left_trigger",
    "left_stick",
    "right_bumper",
    "right_trigger",
    "right_stick",
    "back",
    "guide",
    "capture",
    "left_joy_left",
    "left_joy_right",
    "left_joy_up",
    "left_joy_down",
    "right_joy_left",
    "right_joy_right",
    "right_joy_up",
    "right_joy_down",
    "increment_mode",
    "decrement_mode",
    "touch"
  ]
}
