crates/yokectl/tests/snapshots/json_snapshots__copy_json_snapshot.snap
---
source: crates/yokectl/tests/json_snapshots.rs
expression: v
---
{
  "copied": {
    "from": "default",
    "to": "alt"
  }
}
