crates/yokectl/tests/snapshots/json_snapshots__debug_json_snapshot.snap
---
source: crates/yokectl/tests/json_snapshots.rs
assertion_line: 28
expression: v
---
{
  "device": {
    "kind": "Present",
    "label": "[REDACTED]",
    "mount_point": "[REDACTED]",
    "vid_pid": {
      "product": 0,
      "vendor": 0
    }
  },
  "profiles": []
}
