crates/yokectl/tests/snapshots/json_snapshots__list_json_snapshot.snap
---
source: crates/yokectl/tests/json_snapshots.rs
expression: v
---
{
  "profiles": [
    {
      "byte_len": "[REDACTED]",
      "kind": "Default",
      "name": "default"
    }
  ]
}
