crates/yokectl/tests/snapshots/json_snapshots__pull_json_snapshot.snap
---
source: crates/yokectl/tests/json_snapshots.rs
expression: v
---
{
  "bytes": "[REDACTED]",
  "dest": "[REDACTED]",
  "pulled": "default"
}
