crates/yokectl/tests/snapshots/json_snapshots__rename_json_snapshot.snap
---
source: crates/yokectl/tests/json_snapshots.rs
expression: v
---
{
  "renamed": {
    "from": "default",
    "to": "renamed"
  }
}
